@@ -1,3 +1,9 @@
+2008-01-08  Joe English  <jenglish@users.sourceforge.net>
+
+	* win/ttkWinTheme.c: Add tristate support to checkbuttons 
+	and radiobuttons [Bug 1865898].  Fix check and radio indicator 
+	size [Bug 1679067].
+
 2008-01-06  Joe English  <jenglish@users.sourceforge.net>
 
 	* generic/ttk/ttkWidget.c, generic/ttk/ttkWidget.h:
